--- a/dispositivos/templates/base.html
+++ b/dispositivos/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{% static "base.css"%} "> 
+    <link rel="stylesheet" href="{% static "css/base.css"%} "> 
 </head>
 <body>
     <nav class="navbar">
