--- a/dispositivos/templates/dispositivos_list.html
+++ b/dispositivos/templates/dispositivos_list.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block title %}Dispositivos{% endblock  %}
-    <link type='text/css' href="{% static '/dispositivos/static/css/base.css' %}" rel="stylesheet">
+    <link href=" {% static 'dispositivos/tabla_dispositivos.css' %}" rel="stylesheet">
 </head>
 <body>
 {% block content %}
-<table class="table">
+<table id="devs">
     <tr>
         <th>Serial</th>
         <th>Tipo de dispositivo</th>
