--- a/dispositivos/templates/reporte_list.html
+++ b/dispositivos/templates/reporte_list.html
@@ -5,5 +5,6 @@ Reportes
 {% endblock %}
 
 {% block content %}
+<h1>Listado de Informes</h1>
 <!-- Aquí va el contenido específico de la página dispositivos -->
 {% endblock %}
