--- a/dispositivos/templates/servicios_list.html
+++ b/dispositivos/templates/servicios_list.html
@@ -1,8 +1,34 @@
 {% extends 'base.html' %}
-
-{% block title %} Servicios {% endblock %}
-
-{% block content %}
-<h1></h1>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% block title %} Servicios {% endblock %}
+</head>
+<body>
+    {% block content %}
 <!-- Aquí va el contenido específico de la página dispositivos -->
+<table>
+    <tr>
+        <th>Tipo de Servicio</th>
+        <th>Requerimimento</th>
+        <th>Solucion</th>
+        <th>Dispositivos</th>
+    </tr>
+    {% for servicio in servicios %}
+    <tr>
+        <td>{{ servicio.tipo_servicio }}</td>
+        <td>{{ servicio.requerimiento}}</td>
+        <td>{{ servicio.solucion }}</td>
+        <td>{{ servicio.dispositivos}}</td>
+    </tr>
+    {% endfor %}
+</table>
 {% endblock %}
+</body>
+</html>
+
+
+
