--- a/templates/dispositivos_list.html
+++ b/templates/dispositivos_list.html
@@ -1,12 +1,12 @@
-{% extends 'base.html' %}
+{% extends './base.html' %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block title %}Dispositivos{% endblock  %}
-    {% load static %}
-    <link rel="stylesheet" href=" {% static '/static/dispositivos/base.css' %}">
+    <link rel="stylesheet" href=" {% static 'dispositivos/tabla_dispositivos.css' %}">
 </head>
 <body>
 {% block content %}
