--- a/templates/servicios_list.html
+++ b/templates/servicios_list.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
-{% load static %}
+{% load tailwind_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block title %} Servicios {% endblock %}
+    {% tailwind_css %}
 </head>
 <body>
     {% block content %}
