--- a/templates/dispositivos_list.html
+++ b/templates/dispositivos_list.html
@@ -1,16 +1,14 @@
 {% extends './base.html' %}
-{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block title %}Dispositivos{% endblock  %}
-    <link rel="stylesheet" href=" {% static 'dispositivos/tabla_dispositivos.css' %}">
 </head>
 <body>
 {% block content %}
-<table id="devs" width="100%">
+<table id="device" width="100%">
     <tr>
         <th>Serial</th>
         <th>Tipo de dispositivo</th>
