--- a/templates/dispositivos_list.html
+++ b/templates/dispositivos_list.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 {% block content %}
-<table id="device" width="100%">
+<table id="devices" width="100%">
     <tr>
         <th>Serial</th>
         <th>Tipo de dispositivo</th>
