--- a/templates/base.html
+++ b/templates/base.html
@@ -1,17 +1,48 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %}</title>
-</head>
-<body>
-    <nav class="navbar">
-            <a  class="active" href="{% url 'inicio' %}">Inicio</a>
-            <a href="{% url 'dispositivos' %}">Dispositivos</a>
-            <a href="{% url 'servicios' %}">Servicios</a> 
-    </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <title>
+      {% block title %}
 
-    {% block content %}
-    {% endblock %}
-</body>
+      {% endblock %}
+    </title>
+    <meta name="author" content="name" />
+    <meta name="description" content="description here" />
+    <meta name="keywords" content="keywords,here" />
+    <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css" />
+    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" /> <!-- Totally optional :) -->
+  </head>
+  <body>
+    <nav class="flex items-center justify-between flex-wrap bg-gray-800 p-6 fixed w-full z-10 top-0">
+      <div class="flex items-center flex-shrink-0 text-white mr-6">
+        <a class="text-white no-underline hover:text-white hover:no-underline" href="#"><span class="text-2xl pl-2"><i class="em em-grinning"></i>SIGE TIC</span></a>
+      </div>
+
+      <div class="block lg:hidden">
+        <button id="nav-toggle" class="flex items-center px-3 py-2 border rounded text-gray-500 border-gray-600 hover:text-white hover:border-white">
+          <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+            <title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
+          </svg>
+        </button>
+      </div>
+
+      <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block pt-6 lg:pt-0" id="nav-content">
+        <ul class="list-reset lg:flex justify-end flex-1 items-center">
+          <li class="mr-3">
+            <a class="inline-block py-2 px-4 text-white no-underline" href=" {% url 'inicio' %} ">Inicio</a>
+          </li>
+          <li class="mr-3">
+            <a class="inline-block text-gray-600 no-underline hover:text-gray-200 hover:text-underline py-2 px-4" href="{% url 'dispositivos' %}">Dispositivos</a>
+          </li>
+          <li class="mr-3">
+            <a class="inline-block text-gray-600 no-underline hover:text-gray-200 hover:text-underline py-2 px-4" href="{% url 'servicios' %}">Servicios</a>
+          </li>
+          <li class="mr-3">
+            <a class="inline-block text-gray-600 no-underline hover:text-gray-200 hover:text-underline py-2 px-4" href="#">link</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </body>
 </html>
