--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,4 +1,3 @@
-{% load tailwind_tags %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -12,7 +11,10 @@
     {% block content %}
       <div>
         <div class="max-w-md p-6 mx-auto mt-16 bg-white rounded-md shadow-md pt-7">
-          <h2 class="text-center text-lg font-bold text-gray-700 capitalize dark:text-white">Acceso al sistema</h2>
+          <div class="flex justify-center">
+            <img width="100" height="100" src="https://img.icons8.com/glyph-neue/100/000000/admin-settings-male.png" alt="admin-settings-male"/>
+          </div>
+          <h2 class="text-center text-lg font-bold text-gray-700 capitalize">Acceso al sistema</h2>
 
           <div class="">
             <div class="grid grid-cols-1 gap-6 sm:grid-cols-1">
